discussion/kv_engine/181923/181923_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

No need for locking for AuditConfig

All usage is from the same thread

Change-Id: I80a846c9b3f4bb3359ad8f2f8f748ceacc1adcf4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-27 06:41:46.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-27 06:55:21.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/247/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/247/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11245/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11245/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23548/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23548/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23957/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23957/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11336/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11336/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31973/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31973/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22977/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22977/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24789/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24789/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21515/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    event_filter.withWLock([&rewrittenEventFilterJson](auto& filter) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:155:16: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
             (*event_filter.rlock())->to_json().dump());
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:293:14: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    return (*event_filter.rlock())->clone();
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:119:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::Synchronized<std::unique_ptr<AuditEventFilter>> event_filter;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21515/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5:
error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21515/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42582/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/audit.h:119:5:
error: use of undeclared identifier "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42582/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20784/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
